# AEON

./: .aeon-baseline.json  .aeonrc.yml  .gitignore  .mcp.json  ADAPTER_STATUS.md  AEON_PRD.docx  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: aeon-verification.yml
.hypothesis/constants/: 0260cbdfdd4f2723  0365420ff6a33ab2  04266ca43429ca1e  0b384f9ff206faba  13b6e9f8ca4b71cc  147aae006d1124dd  1877a4bd24a8625a  1dd0dc097fcbcc66  299f46e1d8e9b70c  29dd58f86e85a58c  2a243767a99a8d0c  2be3d9046e192aed  2c2d81a8daf140b5  2c2e54e8ca3da49d  2de0c66e6cec7ab7  2f5a018eff75c039  3467fc4e5a9699e2  37b9641336a15f3f  3a098e567384d06b  3c3a3e6171b8c5db  4795c345519cf24d  4996bc86a1637f2b  4f0e925cb4bf2df4  50821ee301b1cdb3  547da924b23c3d19  55004b6cbb6a3d06  55d8537e69e51ff1  5942d4460c3afddc  5acc622b1b4255ee  60e519621fe51e7d  60f1bcfb2a7e2be0  61e77dc7b49ab7f1  675fa935b1383813  684fb7a423bf4640  6b3ed19e60067d19  76af19787d21ba56  7c2fac8e5dec3bd0  7ea5e1e1579d8cdf  7fdd135a4eaec366  8327ca36029a37e3  (+26 more)
aeon/: __init__.py  abstract_interp.py  ai_integration.py  api_contract.py  api_security.py  api_server.py  ast_nodes.py  autofix.py  autopsy.py  baseline.py  business_logic.py  c_adapter.py  cache.py  ci_templates.py  cli.py  concurrency.py  config.py  construction_domain.py  contracts.py  dashboard.py  data_exposure.py  deadcode.py  dependency_audit.py  differential_privacy.py  effect_algebra.py  effects.py  error_handling.py  errors.py  explain.py  file_upload.py  formal_diff.py  formatters.py  framework_rules.py  fvaas.py  ghost.py  gradual_typing.py  graveyard.py  harden.py  hoare.py  http_smuggling.py  (+56 more)
aeon/adapters/: __init__.py  dart_adapter.py  elixir_adapter.py  go_adapter.py  haskell_adapter.py  java_adapter.py  js_adapter.py  language_adapter.py  php_adapter.py  r_adapter.py  rust_adapter.py  scala_adapter.py  swift_adapter.py  zig_adapter.py
aeon/ai/: __init__.py  synthetic.py
aeon/compiler/: __init__.py  contracts.py  effects.py  errors.py  ir.py  lexer.py  ownership.py  parser.py  pass1_prove.py  pass2_flatten.py  pass3_emit.py  termination.py
aeon/engines/: __init__.py  abstract_interp.py  abstract_refinement.py  ai_intent.py  api_contract.py  auth_access_control.py  cache_poisoning.py  category_semantics.py  certified_compilation.py  coinductive_verification.py  complexity_analysis.py  concurrency.py  construction_domain.py  container_security.py  cross_file.py  crypto_misuse.py  cryptographic_verify.py  deadcode.py  dependent_types.py  effect_handlers.py  email_security.py  error_handling.py  finding_quality.py  framework_rules.py  gradual_typing.py  hoare.py  information_flow.py  linear_resource.py  memory_safety_ml.py  model_checking.py  money_math.py  neural_deductive.py  null_safety.py  numeric_safety.py  oauth_oidc.py  ownership_types.py  prioritize.py  program_synthesis.py  quantum_verification.py  race_condition_security.py  (+15 more)
aeon/enterprise/: __init__.py  config.py  sarif.py
ci-templates/: aeon-security-scan.yml
docs/: soundness.md  whitepaper.md
examples/: contracts.aeon  demo.py  hello_world.aeon
examples/aeon/: algebraic_types.aeon  data_types.aeon  effects_and_tasks.aeon  modules_and_types.aeon  ownership.aeon  pipelines_and_lambdas.aeon  pure_function.aeon  task_function.aeon  traits_and_impls.aeon
examples/algorithms/: concurrent_tasks.aeon  data_structures.aeon  sorting.aeon
examples/data_pipeline/: etl_processor.py  schema_validator.py
examples/ecommerce/: inventory_manager.py  pricing_engine.py
examples/finance/: fraud_detection.py  (+2 more)
final_test/: example_000000.json  example_000001.json  example_000002.json  example_000003.json  example_000004.json  manifest.json
github-action/: action.yml  example-workflow.yml  verify.py
homebrew/: aeon.rb
npm/: package.json
ralph/: prd.json  progress.txt
scoop/: aeon.json
scripts/: aeon-pre-commit
tests/: conftest.py
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
web/: api-reference.html  benchmarks.html  changelog.html  compare.html  docs.html  ethics.html  examples.html  index.html  research.html  tutorials.html
web/css/: style.css
(+39 files in other folders)
