[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeon-lang"
version = "0.5.0"
description = "AEON — AI-native formal verification for 14+ programming languages with 30+ analysis engines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AEON Project"},
]
keywords = [
    "formal-verification",
    "static-analysis",
    "compiler",
    "type-checker",
    "symbolic-execution",
    "abstract-interpretation",
    "z3",
    "smt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "z3-solver>=4.12.0",
]

[project.optional-dependencies]
full = [
    "llvmlite>=0.41.0",
    "javalang>=0.13.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
aeon = "aeon.cli:main"

[project.urls]
Homepage = "https://github.com/aeon-lang/aeon"
Documentation = "https://github.com/aeon-lang/aeon#readme"
Repository = "https://github.com/aeon-lang/aeon"
Issues = "https://github.com/aeon-lang/aeon/issues"

[tool.setuptools.packages.find]
include = ["aeon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
