[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeon-lang"
version = "0.5.0"
description = "AEON — AI-native formal verification for 21 programming languages with 50+ analysis engines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AEON Project"},
]
keywords = [
    "formal-verification",
    "static-analysis",
    "compiler",
    "type-checker",
    "symbolic-execution",
    "abstract-interpretation",
    "z3",
    "smt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Core CLI has no external dependencies — all stdlib + aeon internals.
    # z3, llvmlite, javalang etc. are imported behind try/except guards.
]

[project.optional-dependencies]
z3 = ["z3-solver>=4.12.0"]
llvm = ["llvmlite>=0.41.0"]
java = ["javalang>=0.13.0"]
dashboard = ["flask>=3.0.0", "plotly>=5.0.0"]
fvaas = ["flask>=3.0.0", "flask-limiter>=3.0.0", "PyJWT>=2.0.0"]
full = [
    "z3-solver>=4.12.0",
    "llvmlite>=0.41.0",
    "javalang>=0.13.0",
    "flask>=3.0.0",
    "flask-limiter>=3.0.0",
    "plotly>=5.0.0",
    "PyJWT>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
aeon = "aeon.cli:main"

[project.urls]
Homepage = "https://github.com/aeon-lang/aeon"
Documentation = "https://github.com/aeon-lang/aeon#readme"
Repository = "https://github.com/aeon-lang/aeon"
Issues = "https://github.com/aeon-lang/aeon/issues"

[tool.setuptools.packages.find]
include = ["aeon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "requires_z3: marks tests that require the z3-solver package",
    "requires_llvmlite: marks tests that require llvmlite",
    "requires_hypothesis: marks tests that require hypothesis",
    "requires_api_key: marks tests that require an API key",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
